--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             
         </div>
         <div class="copyright">
-            (주)오핏 | 대표: 홍길동 | 사업자등록번호: 000-00-00000<br>
+            (주)오핏 | 대표: 이동욱 | 사업자등록번호: 000-00-00000<br>
             contact@offit.com<br>
             © 2025 OFFIT. All rights reserved.
         </div>
@@ -141,3 +141,4 @@
     </script>
 </body>
 </html>
+
